manifests/base/controller/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: controller
spec:
  replicas: 1
  selector:
    app.kubernetes.io/component: controller
  template:
    metadata:
      commonLabels:
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: peribolos-controller
      containers:
      - name: controller
        image: controller
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 200Mi
            memory: 100m
