manifests/base/controller/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: controller
  labels:
    backstage.io/kubernetes-id: peribolos-as-a-service
spec:
  ports:
  - name: webhook
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/component: controller
