manifests/base/controller/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: controller
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  to:
    kind: Service
    name: controller
